# chatbot

./: .gitignore  README.md  docker-compose.yaml  pgsaver.md  pyproject.toml
.streamlit/: secrets.toml
chatbot/: agent.py  api.py  app.py  defs.py  ingest_pipeline.py  llm.py  splitter.py  tools.py  vector_store.py
chatbot/app/: app.py
docs/: DiGraph.txt
keycloak/: realm-streamlit.json
tests/unit/: test_agent.py  test_ingestion_pipeline.py  test_llm.py  test_milvus.py  test_splitter.py  test_tools.py  test_vector_store.py
try_streamlit/: entrypoint.py  main_page.py  page_3.py
