[project]
name = "chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "authlib==1.6.5",                       # # https://github.com/streamlit/streamlit/issues/13335
    "fastapi[standard]>=0.124.4",
    "httpx>=0.28.1",
    "httpx-sse>=0.4.3",
    "langchain>=1.1.3",
    "langchain-community>=0.4.1",
    "langchain-deepseek>=1.0.1",
    "langchain-text-splitters>=1.1.0",
    "langgraph>=1.0.5",
    "langgraph-checkpoint-postgres>=3.0.2",
    "psycopg[binary,pool]>=3.3.2",
    "pydantic>=2.12.5",
    "pyjwt>=2.10.1",
    "pymilvus[milvus-lite]>=2.6.5",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.45",
    "streamlit>=1.52.1",
    "zhipuai>=1.0.7",
]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    # We actually do want to import from typing_extensions
    "UP035",
    # Relax the convention by _not_ requiring documentation for every function parameter.
    "D417",
    "E501",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
dev = ["anyio>=4.12.0", "mypy>=1.19.0", "pytest>=9.0.2", "ruff>=0.14.9"]

[tool.pytest.ini_options]
markers = ["anyio: run test with anyio event loop"]
